updated samples for 2023 v2 release

--- a/XF/C1Input101/C1Input101.XF/View/MaskedEntrySample.xaml
+++ b/XF/C1Input101/C1Input101.XF/View/MaskedEntrySample.xaml
@@ -20,11 +20,11 @@
                 <RowDefinition />
             </Grid.RowDefinitions>
             <Label Text="{Binding IDText, StringFormat=\{0\}:}"  VerticalOptions="Center"  />
-            <c1:C1MaskedEntry x:Name="c1MaskedTextBox1" Mask="000-00-0000" Grid.Column="1"  />
+            <c1:C1MaskedEntry x:Name="c1MaskedTextBox1" Mask="000-00-0000" Grid.Column="1" Keyboard="Numeric" />
             <Label Text="{Binding DOBText, StringFormat=\{0\}:}"  VerticalOptions="Center"  Grid.Row="1" />
-            <c1:C1MaskedEntry x:Name="c1MaskedTextBox2" Mask="90/90/0000"  Grid.Row="1" Grid.Column="1" />
+            <c1:C1MaskedEntry x:Name="c1MaskedTextBox2" Mask="90/90/0000"  Grid.Row="1" Grid.Column="1" Keyboard="Numeric" />
             <Label Text="{Binding PhoneText, StringFormat=\{0\}:}"  VerticalOptions="Center"  Grid.Row="2"  />
-            <c1:C1MaskedEntry x:Name="c1MaskedTextBox3" Mask="(999) 000-0000"  Grid.Row="2" Grid.Column="1"   />
+            <c1:C1MaskedEntry x:Name="c1MaskedTextBox3" Mask="(999) 000-0000"  Grid.Row="2" Grid.Column="1"  Keyboard="Telephone"  />
             <Label Text="{Binding StateText, StringFormat=\{0\}:}" VerticalOptions="Center"   Grid.Row="3" />
             <c1:C1MaskedEntry x:Name="c1MaskedTextBox4" Mask="LL" Grid.Row="3" Grid.Column="1"   />
         </Grid>
